fix spacing and mrn font-weight

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -86,7 +86,6 @@ h1 {
 @media screen and (max-width: 900px) {
   .expansive-wrapper {
     flex-direction: column;
-    padding: 32px 0 0 0;
   }
 }
 
